@@ -43,6 +43,7 @@ Bugs fixed
 - Bug 2768 - lte: LteUeNetDevice has a null MAC address
 - Bug 2807 - energy: GetTotalEnergyConsumption is not updated correctly
 - Bug 2809 - wifi: Wifi doesn't fully stop when energy is depleted
+- Bug 2813 - wifi: OFDM 10 MHz and 5 MHz PHYs do not have correct subcarrier frequency spacings
 - Bug 2820 - wifi: segmentation fault when Rrpaa wifi manager is used
 - Bug 2824 - ICMP opcode fr fragment timeout drop is wrong
 - Bug 2828 - OLSR simple P2P example produces wrong results
